php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30106 SOAP cannot not parse 'ref' element. Causes Uncaught SoapFault exception.
Submitted: 2004-09-16 08:59 UTC Modified: 2005-03-22 11:22 UTC
Votes:55
Avg. Score:4.9 ± 0.5
Reproduced:53 of 53 (100.0%)
Same Version:8 (15.1%)
Same OS:3 (5.7%)
From: phpcoder at gmx dot at Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5CVS-2004-09-16 (dev) OS: Windows XP
Private report: No CVE-ID: None
 [2004-09-16 08:59 UTC] phpcoder at gmx dot at
Description:
------------
php-soap extension fails to parse wdsl document

http://mathe.bg-bab.ac.at/ClassServer/service.asmx?WSDL

Returned Error:
Fatal error: Uncaught SoapFault exception: [WSDL] SOAP-ERROR: Parsing Schema: unresolved element 'ref' attribute in c:\Inetpub\class\index.php:2 Stack trace: #0 {main} thrown in c:\Inetpub\class\index.php on line 2

phpinfo() returns: PHP Version 5.0.2-dev (got the dev built from 2004-09-15, 10:30 p.m.)

Reproduce code:
---------------
<?
$client = new SoapClient('http://mathe.bg-bab.ac.at/ClassServer/service.asmx?WSDL');
?>


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-09-16 10:26 UTC] phpcoder at gmx dot at
note: also happens with PHP Version 5.1.0-dev
 [2004-10-04 05:49 UTC] jfxberns at hotmail dot com
I am using the release version of 5.0.2 on Linux--same bug, same error message:

  <?php
    $client = new
    SoapClient(
        "http://www.precisionreservations.com/PRWebServ/getOtherInformation.asmx?WSDL"
    );
   ?>
 [2004-10-13 20:39 UTC] jfxberns at hotmail dot com
I am having this problem and I am also having problems with PEAR::SOAP on 5.0.2...

I can't wait for a fix--I am dead in the water!  

Is there an earlier version of 5.0.x (I am using 5.0.2) that does not have this issue--or do I have to roll all the way back to PHP 4.3.x?
 [2004-12-18 22:02 UTC] jfxberns at hotmail dot com
Is there any status on this bug?  I see it has been assigned for a quite a while.  I just would like to know if there is a solution on the horizon in the near-term.
 [2005-01-11 01:11 UTC] jfxberns at hotmail dot com
Not to be a nag--but is this bug being worked on or just ignored?  I just need to know what kind of priority it has or expected timeframe for resolution so I can make decisions for project planning.  I realize that this is maintained by contributors--but it helps everybody if we at least know what is happening....
 [2005-03-08 14:11 UTC] h at designplastik dot com
I'm getting this error to on Gentoo with PHP 5.03. Please fix this :)
 [2005-03-22 11:22 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_0.

Now you can pass/receive XML Schema and <any> element as strings those contain XML.

 [2010-11-26 03:57 UTC] dpholden at gmail dot com
It appears that it has not been fixed?

http://bugs.php.net/bug.php?id=53293
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC