Fixed bug #30106 (SOAP cannot not parse 'ref' element. Causes Uncaught SoapFault exception)